force-app/src/objects/OrderApi__Assignment__c.object
<CustomObject>
    <description>Assignments track Contacts assigned to purchases of Items (Only available when Items are available for Assignment - determined by the parent Item Class)</description>
    <fields>
        <fullName>EventApi__Contact_Created_By_System__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be automatically checked when the contact is created while registering for an event.</description>
        <inlineHelpText>This field will be automatically checked when the contact is created while registering for an event..</inlineHelpText>
        <label>Contact Created By System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Other_Information__c</fullName>
        <description>Other information needed to configure the assignment.</description>
        <inlineHelpText>Other information needed to configure the assignment.</inlineHelpText>
        <label>Other Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventApi__Register_Site_Url__c</fullName>
        <description>URL endpoint to be used for email registrants.</description>
        <inlineHelpText>URL endpoint to be used for email registrants.</inlineHelpText>
        <label>Register Site Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Registration_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The registration group this assignment belongs to for invitations that may need to be sent out.</description>
        <inlineHelpText>The registration group this assignment belongs to for invitations that may need to be sent out.</inlineHelpText>
        <label>Registration Group</label>
        <referenceTo>EventApi__Registration_Group__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Seat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Linked to the related seat.</description>
        <inlineHelpText>Linked to the related seat.</inlineHelpText>
        <label>Seat</label>
        <referenceTo>EventApi__Seat__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Assigned_Date__c</fullName>
        <description>** System Calculated Required Override ** Defaults to the parent Sales Order Line.</description>
        <inlineHelpText>** System Calculated Required Override ** Defaults to the parent Sales Order Line.</inlineHelpText>
        <label>Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__Assignment_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Required Override ** Link to the Role for the assigned Contact on record.</description>
        <inlineHelpText>** System Calculated Required Override ** Link to the Role for the assigned Contact on record.</inlineHelpText>
        <label>Assignment Role</label>
        <referenceTo>OrderApi__Assignment_Role__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Company_Name__c</fullName>
        <description>Contact company name.</description>
        <inlineHelpText>Contact company name.</inlineHelpText>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Required ** Link to assigned Contact record</description>
        <inlineHelpText>** Required ** Link to assigned Contact record</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sales Activities</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Description__c</fullName>
        <description>Optional description for the Assignment.</description>
        <inlineHelpText>Optional description for the Assignment.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Email__c</fullName>
        <description>** Conditionally Required ** The email address to send notifications to regarding the &quot;Assigned To&quot; record -- required if &quot;Receives Email Notifications&quot; is checked. Defaults to the related Contact&apos;s &quot;Preferred Email&quot;.</description>
        <inlineHelpText>** Conditionally Required ** The email address to send notifications to regarding the &quot;Assigned To&quot; record -- required if &quot;Receives Email Notifications&quot; is checked. Defaults to the related Contact&apos;s &quot;Preferred Email&quot;.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OrderApi__First_Name__c</fullName>
        <description>Contact first name.</description>
        <inlineHelpText>Contact first name.</inlineHelpText>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Full_Name__c</fullName>
        <description>Contact full name.</description>
        <inlineHelpText>Contact full name.</inlineHelpText>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked, the Contact is considered &quot;Active&quot;. Defaults checked.</description>
        <inlineHelpText>When checked, the Contact is considered &quot;Active&quot;. Defaults checked.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Assignment is considered &quot;Primary&quot;.</description>
        <inlineHelpText>When checked, the Assignment is considered &quot;Primary&quot;.</inlineHelpText>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Unassigned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** System Calculated ** This checkbox will auto check to true when a Subscriber (Assignment) is marked as &quot;Is Active&quot; unchecked AND is related to a &quot;Is Active&quot; checked Subscription.</description>
        <inlineHelpText>** System Calculated ** This checkbox will auto check to true when a Subscriber (Assignment) is marked as &quot;Is Active&quot; unchecked AND is related to a &quot;Is Active&quot; checked Subscription.</inlineHelpText>
        <label>Is Unassigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Link to related Item Class.</description>
        <inlineHelpText>** System Calculated ** Link to related Item Class.</inlineHelpText>
        <label>Item Class</label>
        <referenceTo>OrderApi__Item_Class__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Link to related Item.</description>
        <inlineHelpText>** System Calculated ** Link to related Item.</inlineHelpText>
        <label>Item</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Last_Name__c</fullName>
        <description>Contact last name.</description>
        <inlineHelpText>Contact last name.</inlineHelpText>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Mailing_City__c</fullName>
        <description>Contact mailing city.</description>
        <inlineHelpText>Contact mailing city.</inlineHelpText>
        <label>Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Mailing_Country__c</fullName>
        <description>Contact mailing country.</description>
        <inlineHelpText>Contact mailing country.</inlineHelpText>
        <label>Mailing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Mailing_Postal_Code__c</fullName>
        <description>Contact mailing postal code.</description>
        <inlineHelpText>Contact mailing postal code.</inlineHelpText>
        <label>Mailing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Mailing_State__c</fullName>
        <description>Contact mailing postal code.</description>
        <inlineHelpText>Contact mailing postal code.</inlineHelpText>
        <label>Mailing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Mailing_Street__c</fullName>
        <description>Contact mailing street.</description>
        <inlineHelpText>Contact mailing street.</inlineHelpText>
        <label>Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Phone__c</fullName>
        <description>Contact phone.</description>
        <inlineHelpText>Contact phone.</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OrderApi__Receives_Email_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked the linked Contact will be copied on all emails sent regarding the &quot;Assigned To&quot; record. Defaults to the value of the same field on the related &quot;Role&quot; configuration.</description>
        <inlineHelpText>When checked the linked Contact will be copied on all emails sent regarding the &quot;Assigned To&quot; record. Defaults to the value of the same field on the related &quot;Role&quot; configuration.</inlineHelpText>
        <label>Receives Email Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Required ** Assignments must be linked to a source Sales Order Line</description>
        <inlineHelpText>** Required ** Assignments must be linked to a source Sales Order Line</inlineHelpText>
        <label>Sales Order Line (Source)</label>
        <referenceTo>OrderApi__Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** Link to related Subscription Line.</description>
        <inlineHelpText>** System Calculated ** Link to related Subscription Line.</inlineHelpText>
        <label>Subscription Line</label>
        <referenceTo>OrderApi__Subscription_Line__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related Subscription for the subscribing customer.</description>
        <inlineHelpText>Link to related Subscription for the subscribing customer.</inlineHelpText>
        <label>Subscription</label>
        <referenceTo>OrderApi__Subscription__c</referenceTo>
        <relationshipLabel>Subscribers</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to related Term for the subscribing customer.</description>
        <inlineHelpText>Link to related Term for the subscribing customer.</inlineHelpText>
        <label>Term</label>
        <referenceTo>OrderApi__Renewal__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Title__c</fullName>
        <description>Contact title.</description>
        <inlineHelpText>Contact title.</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Unassigned_Date__c</fullName>
        <description>The date the Contact was unassigned.</description>
        <inlineHelpText>The date the Contact was unassigned.</inlineHelpText>
        <label>Unassigned Date</label>
        <type>Date</type>
    </fields>
    <label>Assignment</label>
    <listViews>
        <fullName>OrderApi__All</fullName>
        <columns>NAME</columns>
        <columns>OrderApi__Is_Active__c</columns>
        <columns>OrderApi__Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>